src/objects/Apttus_Approval__Approval_Request__c.object
<CustomObject>
    <description>Designates an approval request created from an approval process</description>
    <label>Approval Request</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>APTSCU_Approval_Action__c</fullName>
        <formula>IF(AND(OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Assigned&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Reassigned&quot;)),OR($Profile.Name=&quot;System Administrator&quot;,$Profile.Name=&quot;Nokia Admin Profile&quot;,$Profile.Name=&quot;Global Process Admin Profile&quot;, $Permission.Sales_Cloud_UAT_Testing )),HYPERLINK(&quot;/apex/Apttus_Approval__ApprovalSummaryLaunch?id=&quot;&amp;Id&amp;&quot;&amp;pageMode=reassign&quot;,&quot;Reassign&quot;&amp;BR(),&quot;_top&quot;),NULL) &amp; 
        IF(AND(OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Assigned&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Reassigned&quot;)),OR(OwnerId=$User.Id,Apttus_Approval__PrevAssignedToId__c=$User.Id, CONTAINS(Apttus_Approval__DelegateApproverIds__c, $User.Id),$Profile.Name=&quot;Apttus Standard User&quot;, $Permission.Sales_Cloud_UAT_Testing )),HYPERLINK(&quot;/apex/APTSCU_ApprovalAction?approvalRequestId=&quot;&amp;Id&amp;&quot;&amp;pageMode=approveReject&quot;,&quot;Approve / Reject&quot;&amp;BR(),&quot;_top&quot;),NULL) 
        &amp; 
        IF(OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Assigned&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Reassigned&quot;)),HYPERLINK(&quot;/apex/APTSCU_ApprovalAction?approvalRequestId=&quot;&amp;Id&amp;&quot;&amp;pageMode=addComment&quot;,&quot;Add Comment&quot;&amp;BR(),&quot;_top&quot;),NULL) 
        &amp; 
        IF(AND(Apttus_Approval__CanEscalate__c,OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Assigned&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c ,&quot;Reassigned&quot;)),OR(Apttus_Approval__Initial_Submitter__c=$User.Id,$Profile.Name=&quot;System Administrator&quot;)),HYPERLINK(&quot;/apex/Apttus_Approval__ApprovalRequestEscalate?id=&quot;&amp;Id,&quot;Escalate&quot;,&quot;_top&quot;),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Actions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Apttus_QPApprov__ProposalId__r.Apttus_Proposal__Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovalDateTechField__c</fullName>
        <defaultValue>NOW()+ VALUE($Label.NF_RemindApproverStackholder)</defaultValue>
        <description>Used for TimeDependantWorkflow to check wether the record has been approved in time or not.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Date Tech Field</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Action__c</fullName>
        <description>Custom Approval Action, without Reassign</description>
        <formula>IF(AND(OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Assigned&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Reassigned&quot;)),OR(OwnerId=$User.Id,Apttus_Approval__PrevAssignedToId__c=$User.Id,Apttus_Approval__DelegateApprover__c=$User.Id,$Profile.Name=&quot;System Administrator&quot;,$Profile.Name=&quot;Apttus Standard User&quot;)),HYPERLINK(&quot;/apex/Apttus_Approval__ApprovalSummaryLaunch?id=&quot;&amp;Id&amp;&quot;&amp;pageMode=approveReject&quot;,&quot;Approve / Reject&quot;&amp;BR(),&quot;_top&quot;),NULL)
&amp;
IF(OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Assigned&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Reassigned&quot;)),HYPERLINK(&quot;/apex/Apttus_Approval__ApprovalSummaryLaunch?id=&quot;&amp;Id&amp;&quot;&amp;pageMode=addComment&quot;,&quot;Add Comment&quot;&amp;BR(),&quot;_top&quot;),NULL)
&amp;
IF(AND(Apttus_Approval__CanEscalate__c,OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Assigned&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c ,&quot;Reassigned&quot;)),OR(Apttus_Approval__Initial_Submitter__c=$User.Id,$Profile.Name=&quot;System Administrator&quot;)),HYPERLINK(&quot;/apex/Apttus_Approval__ApprovalRequestEscalate?id=&quot;&amp;Id,&quot;Escalate&quot;,&quot;_top&quot;),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_User_Check__c</fullName>
        <formula>IF( AND(!ISBLANK(Approver_User__c),!Approver_User__r.IsActive),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inactive User	Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sprint 12
Requirement Number:-3664</description>
        <label>Approver User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aproval_Completion_days__c</fullName>
        <formula>NOW() - Tech_Approval_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aproval Completion days</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Action_Approve_Id__c</fullName>
        <defaultValue>&quot;00b70000000xoxK&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Action Approve Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Action_Prefix__c</fullName>
        <description>DEPRECATED</description>
        <formula>NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>DEPRECATED</inlineHelpText>
        <label>Approval Action Prefix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Action_Reassign_Id__c</fullName>
        <defaultValue>&quot;00b70000000xoxJ&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Action Reassign Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Action__c</fullName>
        <formula>IF(AND(OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Assigned&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Reassigned&quot;)),OR(OwnerId=$User.Id,Apttus_Approval__PrevAssignedToId__c=$User.Id,CONTAINS(Apttus_Approval__DelegateApproverIds__c, $User.Id),$Profile.Name=&quot;System Administrator&quot;,$Profile.Name=&quot;Apttus Standard User&quot;)),HYPERLINK(&quot;/apex/Apttus_Approval__ApprovalSummaryLaunch?id=&quot;&amp;Id&amp;&quot;&amp;pageMode=reassign&quot;,&quot;Reassign&quot;&amp;BR(),&quot;_top&quot;),NULL)
&amp;
IF(AND(OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Assigned&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Reassigned&quot;)),OR(OwnerId=$User.Id,Apttus_Approval__PrevAssignedToId__c=$User.Id,CONTAINS(Apttus_Approval__DelegateApproverIds__c, $User.Id),$Profile.Name=&quot;System Administrator&quot;,$Profile.Name=&quot;Apttus Standard User&quot;)),HYPERLINK(&quot;/apex/Apttus_Approval__ApprovalSummaryLaunch?id=&quot;&amp;Id&amp;&quot;&amp;pageMode=approveReject&quot;,&quot;Approve / Reject&quot;&amp;BR(),&quot;_top&quot;),NULL)
&amp;
IF(OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Assigned&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Reassigned&quot;)),HYPERLINK(&quot;/apex/Apttus_Approval__ApprovalSummaryLaunch?id=&quot;&amp;Id&amp;&quot;&amp;pageMode=addComment&quot;,&quot;Add Comment&quot;&amp;BR(),&quot;_top&quot;),NULL)
&amp;
IF(AND(Apttus_Approval__CanEscalate__c,OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Assigned&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c ,&quot;Reassigned&quot;)),OR(Apttus_Approval__Initial_Submitter__c=$User.Id,$Profile.Name=&quot;System Administrator&quot;)),HYPERLINK(&quot;/apex/Apttus_Approval__ApprovalRequestEscalate?id=&quot;&amp;Id,&quot;Escalate&quot;,&quot;_top&quot;),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ActualApproverName__c</fullName>
        <description>The Actual Approver Name</description>
        <formula>Apttus_Approval__Actual_Approver__r.FirstName &amp; &apos; &apos; &amp; Apttus_Approval__Actual_Approver__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Approver Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Actual_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actual Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000001lyC7EAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AgreementLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated agreement line item</description>
        <inlineHelpText>ID of the associated agreement line item</inlineHelpText>
        <label>Related Agreement Line Item</label>
        <referenceTo>Apttus__AgreementLineItem__c</referenceTo>
        <relationshipLabel>Approval Requests</relationshipLabel>
        <relationshipName>ApprovalRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ApprovalCount__c</fullName>
        <description>The number of approvals required by the approval policy. Only applicable to quorum approval policy.</description>
        <inlineHelpText>The number of approvals required by the approval policy. Only applicable to quorum approval policy.</inlineHelpText>
        <label>Approval Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ApprovalFromEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the request was actioned (approved or rejected) through an email response as opposed to the user interface.</description>
        <label>Approval From Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ApprovalPercent__c</fullName>
        <description>The percent of approvals required by the approval policy. Only applicable to percent approval policy.</description>
        <inlineHelpText>The percent of approvals required by the approval policy. Only applicable to percent approval policy.</inlineHelpText>
        <label>Approval Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ApprovalPolicy__c</fullName>
        <description>The approval policy associated with the rule</description>
        <inlineHelpText>The approval policy associated with the rule</inlineHelpText>
        <label>Approval Policy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unanimous</fullName>
                </value>
                <value>
                    <fullName>Majority</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Quorum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approval_Process__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Process</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Notified</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Reassigned</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approver_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approver Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Assigned_To_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned To Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Assigned_To_Link__c</fullName>
        <formula>IF (ISPICKVAL(Apttus_Approval__Assigned_To_Type__c,&quot;Queue&quot;),
HYPERLINK(&quot;/p/own/Queue/d?id=&quot;&amp;Apttus_Approval__Assigned_To_Id__c&amp;&quot;&amp;setupid=Queues&quot;,Apttus_Approval__Assigned_To_Name__c,&quot;_top&quot;),HYPERLINK(Apttus_Approval__Assigned_To_Id__c,Apttus_Approval__Assigned_To_Name__c,&quot;_top&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Assigned_To_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Assigned_To_Type__c</fullName>
        <label>Assigned To Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approval Matrix</fullName>
                </value>
                <value>
                    <fullName>Rule</fullName>
                </value>
                <value>
                    <fullName>Subprocess</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Custom Queue</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>Custom Role</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Related User</fullName>
                </value>
                <value>
                    <fullName>Custom User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reassigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000001m4PKEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AutoEscalate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to true if this request should be auto-escalated by the system if it not approved, rejected, or reassigned by the expected completion date.</description>
        <inlineHelpText>This field is set to true if this request should be auto-escalated by the system if it not approved, rejected, or reassigned by the expected completion date.</inlineHelpText>
        <label>Auto Escalate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AutoReapprove__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to true if this request should be auto re-approved by the system.</description>
        <inlineHelpText>This field is set to true if this request should be auto re-approved by the system.</inlineHelpText>
        <label>Auto Reapprove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Auto_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the step was auto completed</description>
        <label>Auto Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Backup_From_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backup From User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000028npvEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__CanEscalate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to true if the request can be escalated.</description>
        <inlineHelpText>This field is set to true if the request can be escalated.</inlineHelpText>
        <label>Can Escalate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ChildObjectId__c</fullName>
        <description>ID of the child object</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>ID of the child object</inlineHelpText>
        <label>Child Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ChildObjectLink__c</fullName>
        <description>The link to the child object</description>
        <formula>HYPERLINK(Apttus_Approval__ChildObjectId__c , &quot;View &quot; &amp; Apttus_Approval__ChildObjectType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The link to the child object</inlineHelpText>
        <label>Child Object Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ChildObjectName__c</fullName>
        <description>The child object name</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The child object name</inlineHelpText>
        <label>Child Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ChildObjectRefId__c</fullName>
        <description>ID of the child object associated with the request</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>ID of the child object associated with the request</inlineHelpText>
        <label>Child Object Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ChildObjectType__c</fullName>
        <description>The child object type. Only applicable to a child process step.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The child object type. Only applicable to a child process step.</inlineHelpText>
        <label>Child Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ContinuePolicyApprovalOnAReject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Continue with policy approval even when a step is rejected.</description>
        <inlineHelpText>Continue with policy approval even when a step is rejected.</inlineHelpText>
        <label>Continue Policy Approval on a Reject?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__CriteriaFieldNames__c</fullName>
        <description>The list of field names used in the criteria</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The list of field names used in the criteria</inlineHelpText>
        <label>Criteria Field Names</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__DateApproved__c</fullName>
        <description>The date when the approval request was approved</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__DateAssigned__c</fullName>
        <description>The date when the approval request was assigned</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__DateCancelled__c</fullName>
        <description>The date when the approval request was cancelled</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Cancelled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__DateEscalated__c</fullName>
        <description>The date that the approval request is escalated.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date that the approval request is escalated.</inlineHelpText>
        <label>Date Escalated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__DateReassigned__c</fullName>
        <description>The date when the approval request was last reassigned</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Reassigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__DateRejected__c</fullName>
        <description>The date when the approval request was rejected</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Rejected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__DelegateApproverIds__c</fullName>
        <description>IDs of approvers who were designated as Delegate for the Request Assignee</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>IDs of approvers who were designated as Delegate for the Request Assignee</inlineHelpText>
        <label>Delegate Approvers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__DelegateApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver who is designated as Delegate for the Request Assignee</description>
        <inlineHelpText>Approver who is designated as Delegate for the Request Assignee</inlineHelpText>
        <label>Delegate Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Delegate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__DependsOn__c</fullName>
        <description>List of steps which must be completed before this step</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Depends On</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EscalateToChain__c</fullName>
        <description>The chain of user ids that this request will get escalated to in the event that it is escalated. This chain is determined when the request is initially submitted and is only applicable to dynamic escalation types.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The chain of user ids that this request will get escalated to in the event that it is escalated. This chain is determined when the request is initially submitted and is only applicable to dynamic escalation types.</inlineHelpText>
        <label>Escalate To Chain</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EscalateToId__c</fullName>
        <description>The id of the assignee the request will be escalated to if it is escalated.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The id of the assignee the request will be escalated to if it is escalated.</inlineHelpText>
        <label>Escalate To Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EscalateToName__c</fullName>
        <description>The name of the assignee the request will be escalated to if it is escalated.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The name of the assignee the request will be escalated to if it is escalated.</inlineHelpText>
        <label>Escalate To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EscalateToType__c</fullName>
        <description>The type of assignee the request will be escalated to if it is escalated.</description>
        <inlineHelpText>The type of assignee the request will be escalated to if it is escalated.</inlineHelpText>
        <label>Escalate To Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Backup Admin User</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Related User</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>Rule</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>User Approval Matrix Next Approver</fullName>
                </value>
                <value>
                    <fullName>User Delegated Approver</fullName>
                </value>
                <value>
                    <fullName>User Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EscalatedToHighestLevel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to true if the request has been escalated to the highest level which is typically the backup admin approver defined in the approvals configuration settings.</description>
        <inlineHelpText>This field is set to true if the request has been escalated to the highest level which is typically the backup admin approver defined in the approvals configuration settings.</inlineHelpText>
        <label>Escalated To Highest Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ExpectedCompletionDate__c</fullName>
        <description>The date this approval request is expected to be completed (approved or rejected).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date this approval request is expected to be completed (approved or rejected).</inlineHelpText>
        <label>Expected Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ExpectedDaysToComplete__c</fullName>
        <description>The number of expected days that this approval request needs to be completed in (approved or rejected).</description>
        <inlineHelpText>The number of expected days that this approval request needs to be completed in (approved or rejected).</inlineHelpText>
        <label>Expected Days To Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ExpectedHoursToComplete__c</fullName>
        <description>The number of expected hours that this approval request needs to be completed in (approved or rejected).</description>
        <inlineHelpText>The number of expected hours that this approval request needs to be completed in (approved or rejected).</inlineHelpText>
        <label>Expected Hours To Complete</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ExpectedMinutesToComplete__c</fullName>
        <description>The number of expected minutes that this approval request needs to be completed in (approved or rejected).</description>
        <inlineHelpText>The number of expected minutes that this approval request needs to be completed in (approved or rejected).</inlineHelpText>
        <label>Expected Minutes To Complete</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Group_Unique_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Unique Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__HasAttachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the approval request has one or more attachment(s).</description>
        <label>Has Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__HasDelegateApprover__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the assignee has a delegate approver setup in the system. Delegate Approver will be notified, and, will be permitted to take action on the request.</description>
        <inlineHelpText>Indicates that the assignee has a delegate approver setup in the system. Delegate Approver will be notified, and, will be permitted to take action on the request.</inlineHelpText>
        <label>Has Delegate Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__InEscalation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to true when the request is currently in escalation.</description>
        <inlineHelpText>This field is set to true when the request is currently in escalation.</inlineHelpText>
        <label>In Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000001my9pEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Internal_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__IsAdhoc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this request was created through adhoc process initiated by User.</description>
        <inlineHelpText>Indicates whether this request was created through adhoc process initiated by User.</inlineHelpText>
        <label>Is Adhoc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__IsAutoReapprovalEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether auto re-approval is enabled for the step.</description>
        <inlineHelpText>Indicates whether auto re-approval is enabled for the step.</inlineHelpText>
        <label>Is Auto Reapproval Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__IsSubprocess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the step represents a subprocess</description>
        <label>Is Subprocess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Notify_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates whether the term exception approver receives a notification only for the approval request (when set to true) or gets the request assigned to them and receives notification as well (false, which is the default).</description>
        <inlineHelpText>Designates whether the term exception approver receives a notification only for the approval request (when set to true) or gets the request assigned to them and receives notification as well (false, which is the default).</inlineHelpText>
        <label>Notify Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ObjectRefId__c</fullName>
        <description>ID of the business object associated with the request</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>ID of the business object associated with the request</inlineHelpText>
        <label>Object Ref Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>